# example-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: coverage.yml
tests/: test_readability.py  test_slugify.py  test_stats.py
textkit/: __init__.py  readability.py  slugify.py  stats.py
